font and alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1686,9 +1686,9 @@
 		#header h1 {
 			position: absolute;
 			left: 1em;
-			top: -20px;
+			top: 0;
 			height: 3em;
-			/*line-height: 3em;*/
+			line-height: 3em;
 			cursor: default;
 		}
 
